Given a list of strings, sort them by length.